@startuml
'skinparam linetype polyline


class Client {
    -String clientid «PK»
    -String name
    -String email
    -int NIF
    -int credits
    -int creditCardNumber «FK»
    -double gpsCoordinateX «FK»
    -double gpsCoordinateY «FK»
}

class CreditCard {
    -int creditCardNumber «PK»
    -date validity
    -int verificationCode
}

class Order{
    -int orderID «PK»
    -int clientid «FK»
    -Map<Product, Integer> cart
}

class Product{
    -int idProduct «PK»
    -String name
    -double price
    -double weight
    -int stock
}

Client |o--o| CreditCard
Client |o--o| Order
Order |o-o| CreditCard
Order |o--|{ Product


@enduml